@@ -80,10 +80,10 @@ public class Prayer_Demonshield extends Prayer
 				if((CMLib.dice().rollPercentage()>(source.charStats().getStat(CharStats.STAT_DEXTERITY)*3))
 				   &&(!CMLib.flags().isEvil(source)))
 				{
-					CMMsg msg2=CMClass.getMsg(source,mob,this,verbalCastCode(source,mob,true),null);
-					if(source.location().okMessage(source,msg2))
+					CMMsg msg2=CMClass.getMsg(mob,source,this,verbalCastCode(mob,source,true),null);
+					if(source.location().okMessage(mob,msg2))
 					{
-						source.location().send(source,msg2);
+						source.location().send(mob,msg2);
 						if(invoker==null) invoker=source;
 						if(msg2.value()<=0)
 						{
