@@ -1202,6 +1202,14 @@ Example  : cast "mana burn" orc\n\r\
 The target of this spell instantly loses some of their mana, and continues \
 to use up mana at roughly twice the normal rate.
 
+SPELL_KINETICBUBBLE=SPELL_KINETIC_BUBBLE
+SPELL_KINETIC_BUBBLE=<ABILITY>\
+Usage    : CAST "KINETIC BUBBLE" [TARGET NAME] \n\r\
+Example  : cast "kinetic bubble" bob\n\r\
+This spell evokes an magical bubble around the target.  Any nearby physical \
+attacks against the target will reflect back some of the damage taken to the \
+attacker.
+
 SPELL_KNOW_ORIGIN=<ABILITY>\
 Usage    : CAST "KNOW ORIGIN" [TARGET NAME] \n\r\
 Example  : cast "know origin" sword\n\r\
